--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,28 +1,33 @@
 .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
 
-  .header__img-logo {
+.header__img {
 
-    width: 150px;
-    vertical-align: top;
-    margin-top: -2%;
-  
-  }
+  width: 150px;
+  vertical-align: top;
+  margin-top: -2%;
 
-  .header {
-    grid-area: h;
-    background-color: rgb(84, 86, 85);
-    text-align: center;
-    padding: 50px;
-    margin: 1 auto;
-  }
+}
 
-  /* reborn commit "class-to-module" */
+.header {
+  grid-area: h;
+  background-image: scr="https://source.unsplash.com/random";
+  text-align: center;
+  padding: 50px;
+  margin: 1 auto;
+}
+
+/* header {
+  background-image: scr="https://source.unsplash.com/random";
+} */
+
+
+/* reborn commit "class-to-module" */
