--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -1,19 +1,22 @@
 .content {
     grid-area: c;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 700px;
     background-color: rgb(220, 225, 215);
+    
     /* color: aqua; */
   }
   
-  
-  
   .content__image {
   
-    width: auto;
+    /* width: 100%; */
+    overflow: hidden;
   }
   
-  .content__img-ava {
+  .content__img_ava { 
     margin: 10px auto;
-    width: 100px;
+    width: 15%;
     text-align: start;
   }
   
@@ -24,4 +27,10 @@
 
   .item {
       color: aquamarine
+  }
+
+  .content_wall {
+    width: 1fr;
+    height: 1fr;
+    overflow: auto;
   }
