--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ ul li {
   margin: 0 auto;
   display: grid;
   width: 1200px;
-  height: 900px;
+  height: 1fr;
 
   grid-template-areas:
     "h h"
