--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -6,6 +6,10 @@
   background-color: rgb(220, 225, 215);
   padding: 0%;
   margin: 0%;
+  border-radius: 10px;
+  box-shadow: 10px;
+  font-family: "Sans-serif", Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 700;
 
   /* color: aqua; */
 }
@@ -16,6 +20,7 @@
   text-align: start;
   vertical-align: center;
   overflow: hidden;
+ 
 }
 
 .content__img_ava {
@@ -27,9 +32,11 @@
 .content div {
   margin-left: 20px;
   text-align: left;
+  
 }
 
 .item {
+  
   color: aquamarine
 }
 
@@ -40,4 +47,6 @@
   overflow: hidden;
   padding-left: 0;
   margin-left: 0;
+  border-radius: 10px;
+  
 }
