on-WebStorm-Dialogs

--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,11 @@ ul li {
 
 }
 
+.app-wrapper-content {
+
+}
+
+
 .wallpaper {
   width: 100%;
   position: absolute;
@@ -63,3 +68,4 @@ ul li {
 
 
 }
+
