--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,7 +2,8 @@
     grid-area: n;
     background-color: rgb(167, 167, 167);
     border-radius: 10px;
-    padding: 10%;
+    padding: 20px;
+    /*margin: 0 auto;*/
     
   }
 
