--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -25,7 +25,6 @@
 
   width: 1fr;
   height: 100%;
-  background-repeat: ;
 
   overflow: auto;
 
@@ -36,7 +35,8 @@
   width: 150px;
   padding-top: 25px;
   vertical-align: middle;
-  animation: spin infinite 20s linear;
+  text-align: center;
+  /*animation: spin infinite 20s linear;*/
 }
 
 
