--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -7,21 +7,14 @@
   padding: 0%;
   margin: 0%;
   border-radius: 10px;
-  box-shadow: 10px;
+ /* box-shadow: 10px;*/
   font-family: "Sans-serif", Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 700;
 
   /* color: aqua; */
 }
 
-.content__image {
 
-  /* width: 100%; */
-  text-align: start;
-  vertical-align: center;
-  overflow: hidden;
- 
-}
 
 .content__img_ava {
   margin: 10px auto;
@@ -42,11 +35,21 @@
 
 .content_wall {
  text-align: left;
-  width: 1fr;
+  width: 1200px;
   height: 1fr;
   overflow: hidden;
   padding-left: 0;
   margin-left: 0;
   border-radius: 10px;
   
+}
+
+.content__image {
+
+    /* width: 100%; */
+    text-align: start;
+    vertical-align: center;
+    overflow: hidden;
+    /*width: 1200px;*/
+
 }
