--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,8 +2,8 @@
     grid-area: n;
     background-color: rgb(167, 167, 100);
     border-radius: 10px;
-    padding: 20px;
-    /*margin: 0 auto;*/
+    padding: 10%;
+    margin: 0 auto;
     
   }
 
