--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,60 +1,71 @@
 div {
-  padding: 30%;
-  text-align: end;
+    padding: 10px;
+    text-align: start;
 }
 
 .MyPosts_header {
-  padding: 30%;
-  text-align: end;
+    padding: 10px;
+    text-align: start;
 }
-
 
 
 .content {
-  grid-area: c;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 700px;
-  background-color: rgb(220, 225, 215);
-  /* padding: 0%;
-  margin: 0%; */
+    grid-area: c;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 700px;
+    background-color: rgb(220, 225, 215);
+    /* padding: 0%;
+    margin: 0%; */
 
-  /* color: aqua; */
+    /* color: aqua; */
 }
 
 .posts {
-   margin-bottom: 200px;
+    margin-top: 3%;
+    margin-bottom: 200px;
 }
 
 .content__image {
 
-  /* width: 100%; */
-  text-align: start;
-  vertical-align: center;
-  overflow: hidden;
+    /* width: 100%; */
+    text-align: start;
+    vertical-align: center;
+    overflow: hidden;
 }
 
 .content__img_ava {
-  margin: 10px auto;
-  width: 15%;
-  text-align: start;
+    margin: 10px auto;
+    width: 15%;
+    text-align: start;
 }
 
 .content div {
-  margin-left: 20px;
-  text-align: left;
+    margin-left: 20px;
+    text-align: left;
 }
 
 .item {
-  color: rgb(28, 30, 29);
-  margin-bottom: 200px;
+    color: rgb(28, 30, 29);
+    margin-bottom: 200px;
 }
 
 .content_wall {
- text-align: left;
-  width: 1fr;
-  height: 1fr;
-  overflow: hidden;
-  padding-left: 0;
-  margin-left: 0;
+    text-align: left;
+    width: 1fr;
+    height: 1fr;
+    overflow: hidden;
+    padding-left: 0;
+    margin-left: 0;
+}
+
+.addPost {
+    display: grid;
+    grid-template-columns: 10fr 1fr;
+}
+
+ h3 {
+     text-align: center;
+    /*padding-left: 50%;*/
+    color: brown;
 }
