--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,19 +1,22 @@
 .dialogs {
-display: grid;
-    grid-template-columns: 2fr 10fr ;
+    display: grid;
+    grid-template-columns: 2fr 10fr;
     background-color: bisque;
     padding: 10px;
     border-radius: 10px;
     margin-top: -9px;
+    text-decoration: none;
 }
 
 .dialogsItems {
-padding: 10px;
+    padding: 10px;
 
 }
 
 .dialogsItems .dialog {
-padding: 10px;
+    padding: 10px;
+    color: #61dafb;
+    text-decoration: none;
 
 }
 
@@ -25,6 +28,7 @@ padding: 10px;
     padding: 10px;
 
 }
+
 .NavLink {
     color: brown;
     text-decoration: none;
