--- a/src/components/Dialogs/Dialog/Dialog.module.css
+++ b/src/components/Dialogs/Dialog/Dialog.module.css
@@ -1,5 +1,25 @@
 .dialog {
+    display: grid;
+    grid-column-gap: 30px;
+    grid-template-columns: 50px 1fr;
+    grid-template-rows: auto;
+    grid-column-start: 1;
+    grid-column-end: 2;
     padding: 10px;
     text-decoration: none;
     color: #61dafb;
+    vertical-align: center;
+
+}
+
+.dialog_ava {
+    overflow: hidden;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.ava {
+    margin-left: -20px;
+    height: inherit;
 }
